K8S/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: bes1815/comments

---
apiVersion: v1
kind: Service
metadata:
  name: comments
spec:
  #type: NodePort
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
      #nodePort: 30007
