K8S/event-bus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: bes1815/event-bus

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus
spec:
  #type: NodePort
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
      #nodePort: 30008
