K8S/moderation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: bes1815/moderation

---
apiVersion: v1
kind: Service
metadata:
  name: moderation
spec:
  #type: NodePort
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
      #nodePort: 30009
