K8S/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: bes1815/query

---
apiVersion: v1
kind: Service
metadata:
  name: query
spec:
  #type: NodePort
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
      #nodePort: 30011
